[package]
edition      = "2021"
name         = "airqual"
rust-version = "1.89"
version      = "0.1.0"
license-file = "LICENSE"

[[bin]]
name = "airqual"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s2"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32s2", "unstable", "log-04"] }

esp-backtrace = {version = "0.17.0", features = [
  "esp32s2",
  "exception-handler",
  "panic-handler",
  "println",
]}
esp-println = {version = "0.15.0", features = ["esp32s2", "log-04"]}
esp-alloc = "0.8.0"
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
u8g2-fonts = {version = "0.7.2", default-features= false}
zerocopy = { version = "0.8", features = ["derive"] }
heapless = "0.9.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
lto = true

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
