[package]
edition      = "2021"
name         = "airqual"
rust-version = "1.89"
version      = "0.1.0"
license-file = "LICENSE"

[[bin]]
name = "airqual"
path = "./src/bin/main.rs"

[dependencies]
# Async stuff?
embassy-executor = "0.9.1"
embassy-time = { version = "0.5.0", features = ["generic-queue-8"] }
embassy-net = { version = "0.7.1", features = ["proto-ipv4", "udp", "dhcpv4", "medium-ethernet"] }
esp-rtos = { version = "0.2.0", features = ["esp32s2", "embassy", "esp-radio", "esp-alloc"] }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32s2"] }
esp-hal                = { version = "1.0.0", features = ["esp32s2", "unstable", "log-04", "psram"] }
esp-backtrace = {version = "0.16.0", features = [
  "esp32s2",
  "panic-handler",
  "println",
]}
esp-println = { version = "0.14.0", features = ["esp32s2"]}
esp-alloc = "0.9.0"
mipidsi = "0.9.0"
esp-metadata-generated = "0.3.0"
embedded-graphics = "0.8.1"
esp-radio = { version = "0.17.0", features = ["xtensa-lx-rt", "esp32s2", "wifi", "smoltcp", "unstable", "log-04"] }
smoltcp = { version = "0.12.0", default-features=false, features = ["proto-ipv4", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-hal-bus = "0.3.0"
u8g2-fonts = {version = "0.7.2", default-features= false}
zerocopy = { version = "0.8", features = ["derive"] }
heapless = "0.9.2"
esp-phy = "0.1.1"
static_cell = "2.1.1"
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
lto = true

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
